--- a/app/views/definitions/_definition_edit.html.erb
+++ b/app/views/definitions/_definition_edit.html.erb
@@ -8,7 +8,7 @@
 <%= f.hidden_field :id %>
 <%#= f.text_area :definition, :class => 'mceEditor' %>
 <% case params[:field] 
-	when 'image', 'image_caption', 'image_photographer','image_link', 'audio', 'audio_id_number', 'audio_speaker', 'audio_date', 'audio_place_of_recording', 'audio_link', 'video', 'video_id_number', 'video_speaker', 'video_date', 'video_place_of_recording', 'video_link'  then %>
+	when 'numerology', 'encyclopedia_entry', 'image', 'image_caption', 'image_photographer','image_link', 'audio', 'audio_id_number', 'audio_speaker', 'audio_date', 'audio_place_of_recording', 'audio_link', 'video', 'video_id_number', 'video_speaker', 'video_date', 'video_place_of_recording', 'video_link'  then %>
 		<%= f.text_field params[:field]  %>
 	<%	else %>
 		<%= f.text_area params[:field], :class => 'mceEditor'  %>
