--- a/app/views/etymologies/_edit_dynamic_etymology.html.erb
+++ b/app/views/etymologies/_edit_dynamic_etymology.html.erb
@@ -26,7 +26,7 @@ $(document).ready(function() {
 	
 
 	<b>Etymology: </b>
-
+	<%= link_to image_tag('pencil.png',:border => 0), etymology_inline_edit_url(:id => @etymology.id, :field => 'etymology', :div_suffix => 'etypopupdiv'), :remote => true %> 	
 	<% inline_edit_path = etymology_inline_edit_url(:id => @etymology.id, :field => 'etymology', :div_suffix => 'etypopupdiv') %>
 	<% if @etymology.etymology.blank?
 	       t_content = 'Click to modify'
@@ -40,6 +40,7 @@ $(document).ready(function() {
 	</span>
 
 	<br><b>Analytical note: </b>
+	<%= link_to image_tag('pencil.png',:border => 0), etymology_inline_edit_url(:id => @etymology.id, :field => 'analytical_note', :div_suffix => 'anotediv'), :remote => true %> 	
 	<% inline_edit_path = etymology_inline_edit_url(:id => @etymology.id, :field => 'analytical_note', :div_suffix => 'anotediv') %>
 	<% if @etymology.analytical_note.blank?
 	       t_content = 'Click to modify'
@@ -63,7 +64,7 @@ $(document).ready(function() {
 	
 	<br><b>Edit Multimedia Data: </b>
 	<input type='button' name='toggleh1' value='show/hide multimedia' id='toggleh1'><br>
-	<div class='showhide'>
+	<div class='showhide' style='border-style:solid;border-width:1px;padding:5px 5px;margin-left: 5pt;'>
 		<br><b>Image: </b>
 		<br><%#= best_in_place @etymology, :image %>
 		<% inline_edit_path = etymology_inline_edit_url(:id => @etymology.id, :field => 'image', :div_suffix => 'imagediv') %>
