--- a/app/views/definitions/public_edit.html.erb
+++ b/app/views/definitions/public_edit.html.erb
@@ -265,10 +265,12 @@ function clear_contents(node)
 		    url: '/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition,
 			success: function(data) {
 				//alert(data);
-				$("#popup_dialog").html("<p></p>")
-			    $("#popup_dialog").html(data);
-				$("#popup_dialog").dialog( "destroy" );
-				$("#popup_dialog" ).dialog({ modal: true, width: 650});
+				
+				//$("#popup_dialog").html("<p></p>")
+			    //$("#popup_dialog").html(data);
+				//$("#popup_dialog").dialog( "destroy" );
+				//$("#popup_dialog" ).dialog({ modal: true, width: 650});
+				
 			    ////$("#popup_dialog").dialog({ modal: true, width: 650, autoOpen: false });
 			    ////$("#popup_dialog").dialog('open');
 			
