--- a/app/views/translation_equivalents/update_dynamic.js.erb
+++ b/app/views/translation_equivalents/update_dynamic.js.erb
@@ -1,1 +1,1 @@
-$("#<%= @parent_element.id %>_<%=@parent_element.class.name.downcase%>_translation_equivalents_div").html("<%= escape_javascript(render(:partial => 'translation_equivalents/index', :locals => {:o => @parent_element, :parent_id => @temp_definition, :head_id => @temp_definition})) %>")
+$("#<%= @translation_equivalent.def_id %>_translation_equivalents_div").html("<%= escape_javascript(render(:partial => 'translation_equivalents/index', :locals => {:d => @temp_definition, :parent_id => @temp_definition, :head_id => @temp_definition})) %>")
