model sentences functionality

--- a/app/views/definitions/_public_definition.html.erb
+++ b/app/views/definitions/_public_definition.html.erb
@@ -101,7 +101,7 @@
 	</div>
 
 	<div id="<%= d.id%>_model_sentences_div"> 
-	  <%#=   render :partial => 'model_sentences/index', :locals => {:d => d, :parent_id => parent_id, :head_id => head_id} %>	
+	  <%=   render :partial => 'model_sentences/index', :locals => {:d => d, :parent_id => parent_id, :head_id => head_id} %>	
 	</div>
 	
 	<div id="<%= d.id%>_literary_quotations_div"> 
