--- a/app/views/definitions/public_edit.html.erb
+++ b/app/views/definitions/public_edit.html.erb
@@ -247,40 +247,10 @@ function clear_contents(node)
  	/*function add_new_popup(controller,relatedtype,id) {	
 		tb_show("add new popup", root_dir+'/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition+'&height=450&internal=edit_box&modal=true&public=yes&width=550&TB_iframe=true',null);
 	};	*/
- 	function add_new_popup(controller,relatedtype,id) {	
-		$.ajax({
-		    url: root_dir+'/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition,
-			success: function(data) {
-				$("#popup_dialog").html("<p></p>")
-			    $("#popup_dialog").html(data);
-				$("#popup_dialog").dialog( "destroy" );
-			    $("#popup_dialog").dialog({ modal: true, width: 650, autoOpen: false });
-			    $("#popup_dialog").dialog('open');
-			  } ,
-		    timeout: 3000 
-		  });
-	};	
+ 	f	
 
 
-	function add_new_content(controller,relatedtype,id) {
-		$.ajax({
-		    url: '/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition,
-			success: function(data) {
-				//alert(data);
-				
-				//$("#popup_dialog").html("<p></p>")
-			    //$("#popup_dialog").html(data);
-				//$("#popup_dialog").dialog( "destroy" );
-				//$("#popup_dialog" ).dialog({ modal: true, width: 650});
-				
-			    ////$("#popup_dialog").dialog({ modal: true, width: 650, autoOpen: false });
-			    ////$("#popup_dialog").dialog('open');
-			
-			  } ,
-		    timeout: 3000 
-		  });
-		
-	};
+
 	
 	/*function add_new_relationship(controller,relatedtype,id,role_to,role_from) {
 		//new Ajax.Updater('edit_box', root_dir+'/'+controller+'/edit_new/'+id+'?internal=edit_box&public=yes&relatedtype='+relatedtype+'&role_to='+role_to+'&role_from='+role_from+'&definition_id='+head_definition, {asynchronous:true, evalScripts:true, onLoading:function(request){new Effect.Appear("edit_box");}}); 
@@ -340,6 +310,32 @@ function clear_contents(node)
 	
 	
 </script>
+
+<script type="text/javascript">
+	/* Upgraded Code 2013*/
+	function add_new_content(controller,relatedtype,id) {
+		$.ajax({
+		    url: '/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition,
+			success: function(data) {
+			
+			  } ,
+		    timeout: 3000 
+		  });
+		
+	};
+	
+	function add_new_popup(controller,relatedtype,id) {	
+		$.ajax({
+		    url: root_dir+'/'+controller+'/edit_new/'+id+'?level=0&relatedtype='+relatedtype+'&definition_id='+head_definition,
+			success: function(data) {
+	
+			  } ,
+		    timeout: 3000 
+		  });
+	};
+</script>
+
+
 <script language="JavaScript">
 
 	var root_dir="<%= $root_dir%>";
