changes for translations removal, oral quotation model

--- a/app/views/definitions/_public_definition.html.erb
+++ b/app/views/definitions/_public_definition.html.erb
@@ -109,7 +109,7 @@
 	</div>
 	
 	<div id="<%= d.id%>_oral_quotations_div"> 
-	  <%#=   render :partial => 'oral_quotations/index', :locals => {:d => d, :parent_id => parent_id, :head_id => head_id} %>	
+	  <%=   render :partial => 'oral_quotations/index', :locals => {:d => d, :parent_id => parent_id, :head_id => head_id} %>	
 	</div>
 		
 	
