--- a/app/views/definitions/public_remove_literary_quotation.js.erb
+++ b/app/views/definitions/public_remove_literary_quotation.js.erb
@@ -1,2 +1,2 @@
 
-$("#<%= @literary_quotation.definitions.first.id %>_literary_quotations_div").html("<%= escape_javascript(render(:partial => 'literary_quotations/index', :locals => {:d => @temp_definition, :parent_id => @temp_definition, :head_id => @temp_definition})) %>")
+$("#<%= @temp_definition.id %>_literary_quotations_div").html("<%= escape_javascript(render(:partial => 'literary_quotations/index', :locals => {:d => @temp_definition, :parent_id => @temp_definition, :head_id => @temp_definition})) %>")
